# stardag

./: .gitignore  .pre-commit-config.yaml  README.md  USER_GUIDE.md  _NOTES.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
examples/: composability.py  params.py  task_api_three_levels.py
examples/ml_pipeline/: README.md  base.py  class_api.py  decorator_api.py  prefect_build.py
src/dcdag/: auto_task.py  decorator.py  parameter.py  task.py  task_parameter.py
src/dcdag/core/: asset.py  auto_task.py  decorator.py  fsttask.py  functional.py  parameter.py  target.py  task.py  task_parameter.py
src/dcdag/core/resources/: __init__.py  target_factory.py
src/dcdag/core/utils/: testing.py
src/dcdag/examples/ml_pipeline/: base.py  class_api.py  dag.py  decorator_api.py
src/dcdag/resources/: __init__.py  resource_provider.py  target_factory.py
src/dcdag/utils/: testing.py
src/dcdag/utils/testing/: __init__.py  namepace.py
src/stardag/: auto_task.py  decorator.py  parameter.py  task.py  task_parameter.py
src/stardag/integration/prefect/: build.py  utils.py
src/stardag/resources/: __init__.py  target_factory.py
src/stardag/utils/: generic.py
src/stardag/utils/testing/: __init__.py  dynamic_deps_dag.py  namepace.py  simple_dag.py
tests/: conftest.py  test_conftest.py  test_decorator.py  test_functional.py  test_task.py  test_task_parameter.py
tests/test_build/: test_sequential.py
tests/test_examples/test_ml_pipeline/: conftest.py  test_decorator_api.py
tests/test_integration/test_prefect/: conftest.py  test_build.py
tests/test_target/: test_serialize.py
tests/test_utilis/: test_generic.py
