[tool.poetry]
name = "stardag"
version = "0.0.1"
description = ""
authors = ["Anders Huss <andhus@kth.se>"]
packages = [{ include = "stardag", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"

pandas = { version = "^2.2.3", optional = true }
scikit-learn = { version = "^1.5.2", optional = true }
numpy = { version = "^2.1.1", optional = true }
prefect = { version = "^3.0.3", optional = true }


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ipython = "^8.25.0"
pytest-asyncio = "^0.23.7"
ipdb = "^0.13.13"


[tool.poetry.extras]
examples-ml-pipeline = ["pandas", "scikit-learn", "numpy"]
prefect = ["prefect"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"


[tool.pytest]
testpaths = ["tests"]
